--- a/Website/Index.html
+++ b/Website/Index.html
@@ -2,6 +2,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
         <link rel="manifest" href="manifest.json">
+        <title>Smart Clock</title>
         <style>
             body,html {
                 font-family: Helvetica,Arial,sans-serif;
